Moved background css to stylesheet, as well as the menuicon css. Figured out that the repeat-space wasn't working simply because the music and reedinfo pages weren't long enough to have the pattern repeat since the placeholder text was at the very top

--- a/css/bknd.css
+++ b/css/bknd.css
@@ -1,7 +1,9 @@
 body
 {
-  background-image:url("../img/bknd3.png");
-  background-position:0px 1000px;
+  background-image: url("../img/bknd3.png");
   background-repeat: space;
   background-color: #C1DAE9;
+  background-position: 0px 0px;
+  font-family: helvetica;
+  overflow: hidden;
 }
