--- a/css/menuicon.css
+++ b/css/menuicon.css
@@ -1,22 +1,15 @@
-.menuicon
-{
-  width: 35px;
-  height: 3px;
-  background-color: #999999;
-  margin: 8px 0;
-}
-.menuicon:hover
-{
-    /*background-color: #333333;*/
-}
+
 #menuicon
 {
   float: right;
-  margin: -0.2% 1%;
   opacity: 1;
   transition: 0.5s;
+  border: 0;
+  margin-top: .5%;
+  margin-right: .7%;
+  width: 3%;
 }
-#menuicon:hover
+/*#menuicon:hover
 {
-  background-color: #333333;
-}
+  background-color: #bbbbbb;
+}*/
