--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,19 +3,20 @@ ul
   list-style-type: none;
 	position: fixed;
 	top: 0;
-	left: 0;
+	left: 100%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
+  border: 0;
 	background-color: #000000;
 	z-index: 1;
-  transition: 0.5s;
-  opacity: 0;
+  visibility: hidden;
+
 }
-ul:hover
+/*ul:hover
 {
   opacity: 1;
-}
+}*/
 li
 {
 	float: left;
