--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,13 +3,14 @@
   list-style-type: none;
 	position: fixed;
 	top: 0;
+  left: 0;
 	width: 100%;
 	margin: 0;
 	padding: 0;
   border: 0;
 	background-color: #000000;
 	z-index: 1;
-  visibility: hidden;
+  visibility: visible;
 
 }
 /*ul:hover
