--- a/css/youtube.css
+++ b/css/youtube.css
@@ -1,5 +1,32 @@
 iframe
 {
 display: block;
-margin-top: 5%;
+padding: 1%;
+transition: 0.35s;
+width: 200px;
+height: 112.5px;
 }
+/* iframe:hover
+{
+  width: 560px;
+  height: 315px;
+} */
+#ompWeber
+{
+  width: 100%%;
+  margin-top: 5%;
+}
+/* #ompWeber:hover
+{
+  width: 100%;
+  background-color: #89b8d5;
+} */
+#bozza
+{
+  width: 100%;
+}
+/* #bozza:hover
+{
+  background-color: #89b8d5;
+} */
+/* default size is width="560" height="315" */
