--- a/css/youtube.css
+++ b/css/youtube.css
@@ -13,8 +13,8 @@ height: 112.5px;
 } */
 #ompWeber
 {
-  width: 100%%;
-  margin-top: 5%;
+  width: 100%;
+  /* margin-top: 5%; */
 }
 /* #ompWeber:hover
 {
