--- a/css/navbar.css
+++ b/css/navbar.css
@@ -59,10 +59,8 @@ li.dropdown
 {
 	background-color: #999999;
 }
-.dropdown:hover .dropdown-content
-{
-	display: block;
-  transition: 0.5s;
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 .rightSide
 {
@@ -73,11 +71,11 @@ li.dropdown
   float: right;
   display: block;
   opacity: 1;
-  transition: 0.5s;
   border: 0;
-  margin-top: .5%;
-  margin-right: .7%;
-  width: 3%;
+  margin-top: .04%;
+  margin-right: .03%;
+  width: 40px;
+  /* width: 2.7%; */
 }
 /*#menuicon:hover
 {
@@ -85,12 +83,13 @@ li.dropdown
 }*/
 #menuIconLi
 {
+  /* width: 42px; */
   width: 3%;
 }
-#menuIconLi:hover{
-  background-color: #999999;
-}
-#menuiconNavBar
+/* #menuIconLi:hover{
+  background-color: #333333;
+} */
+#menuiconWhite
 {
   display: block;
   float: right;
@@ -101,5 +100,8 @@ li.dropdown
   margin-right: 10%; */
   margin: 25% 10%;
   padding: 0;
+  /* width: auto; */
+  /* width: 40px; */
+  /* object-fit: contain; */
   width: 90%;
 }
