--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,7 +3,7 @@
   list-style-type: none;
 	position: fixed;
 	top: 0;
-  left: 100%;
+  left: 0%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
@@ -76,6 +76,7 @@ li.dropdown
   margin-right: .03%;
   width: 40px;
   /* width: 2.7%; */
+  visibility: hidden;
 }
 /*#menuicon:hover
 {
