--- a/css/bknd.css
+++ b/css/bknd.css
@@ -5,3 +5,47 @@ body
   background-color: #C1DAE9;
   font-family: helvetica;
 }
+#welcome
+{
+  display: inline-block;
+  text-align: center;
+  font-size: 20vh;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%) translateY(75%);
+  transition: 0.5s;
+}
+#name
+{
+  width: 10%;
+  display: block;
+  margin-left: auto;
+    margin-right: auto;
+  opacity: 0;
+  transform: translateY(200%);
+  transition: 0.5s;
+}
+#welcome:hover
+{
+  opacity: 0;
+}
+#name:hover
+{
+  opacity: 1;
+}
+#bassoonZoneHeading
+{
+  font-size: 15vh;
+  transform: translateY(25%);
+  text-align: center;
+}
+#performancesHeading{
+  font-size: 15vh;
+  transform: translateY(25%);
+  text-align: center;
+}
+#reedsHeading{
+  font-size: 15vh;
+  transform: translateY(25%);
+  text-align: center;
+}
