--- a/css/bknd.css
+++ b/css/bknd.css
@@ -13,7 +13,7 @@ p{
 {
   display: inline-block;
   text-align: center;
-  font-size: 20vh;
+  font-size: 10vw;
   position: relative;
   left: 50%;
   transform: translateX(-50%) translateY(75%);
