Entire animation for one year!

--- a/css/oneyear.css
+++ b/css/oneyear.css
@@ -26,7 +26,7 @@ a:hover{
   transition: 0.3s;
   background-color: #999999;
 }
-a, a:visited, a:hover, a:active{
+#celebrationlink{
   text-decoration: none;
   line-height: 5vh;
   color: black;
