--- a/css/celebration.css
+++ b/css/celebration.css
@@ -1,5 +1,8 @@
 #text{
   opacity: 0;
+  font-size: 5vh;
+  margin-top: 30vh;
+  text-align: center;
 }
 #caption{
   opacity: 0;
@@ -10,27 +13,32 @@
   opacity: 0;
 }
 
-#imgs1, #imgs2, #imgs3{
-  text-align: center;
-}
+
 #imgs1{
   display: none;
   /* display: inline-block; */
   opacity: 0;
+  margin-top: 10vh;
 }
 #imgs2{
   display: none;
   /* display: inline-block; */
   opacity: 0;
+  margin-top: 10vh;
 }
 #imgs3{
   display: none;
   /* display: inline-block; */
   opacity: 0;
+  transform: translateY(-7%);
+}
+#imgs3 img{
+  height: 38vh;
+}
+#imgs1, #imgs2, #imgs3{
+  text-align: center;
 }
 img{
-  max-width: 25%;
+  max-width: 40%;
   display: inline-block;
-  /* opacity: 0; */
-  /* margin: auto; */
 }
