--- a/css/celebration.css
+++ b/css/celebration.css
@@ -10,9 +10,9 @@ body{
 #caption{
   opacity: 0;
   text-align: center;
-  margin-top: 5vh;
+  margin-top: 10vh;
 }
-#clicktoreplay{
+#date{
   text-align: center;
   opacity: 0;
 }
@@ -35,14 +35,15 @@ body{
   /* display: inline-block; */
   opacity: 0;
   transform: translateY(-10%);
+  margin-top: 7vh;
 }
 #imgs3 img{
-  height: 38vh;
+  /* max-width: 15vh; */
 }
 #imgs1, #imgs2, #imgs3{
   text-align: center;
 }
 img{
-  max-width: 40%;
+  max-width: 30%;
   display: inline-block;
 }
