--- a/css/celebration.css
+++ b/css/celebration.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #f6d2d0;
+  background-color: #f0b0b4;
 }
 #text{
   opacity: 0;
@@ -16,34 +16,34 @@ body{
   text-align: center;
   opacity: 0;
 }
-
-
 #imgs1{
   display: none;
-  /* display: inline-block; */
   opacity: 0;
   margin-top: 7vh;
 }
 #imgs2{
   display: none;
-  /* display: inline-block; */
   opacity: 0;
   margin-top: 7vh;
 }
 #imgs3{
   display: none;
-  /* display: inline-block; */
   opacity: 0;
   transform: translateY(-10%);
   margin-top: 7vh;
 }
-#imgs3 img{
-  /* max-width: 15vh; */
-}
 #imgs1, #imgs2, #imgs3{
   text-align: center;
 }
-img{
+#imgs1 img{
+  max-width: 60%;
+  display: inline-block;
+}
+#imgs2 img{
+  max-width: 40%;
+  display: inline-block;
+}
+#imgs3 img{
   max-width: 30%;
   display: inline-block;
 }
